--- a/en/contact.html
+++ b/en/contact.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/custom_new.css">
+    <link rel="stylesheet" href="../css/custom_new.css">
 </head>
 <body>
     <nav class="title-nav position-fixed navbar navbar-expand-lg navbar-dark align-items-center justify-content-end w-100 top-0">
-        <a class="logo nav-link position-absolute p-0 ph-only" href="index.html"><img class="logo-img w-100" src="images/logo.png" alt=""></a>
+        <a class="logo nav-link position-absolute p-0 ph-only" href="index.html"><img class="logo-img w-100" src="../images/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="promotions.html">Promotions</a>
                 </li>
                 <li class="nav-item text-center pc-only">
-                    <a class="logo nav-link position-relative" href="index.html"><img class="logo-img position-absolute w-100" src="images/logo.png" alt=""></a>
+                    <a class="logo nav-link position-relative" href="index.html"><img class="logo-img position-absolute w-100" src="../images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link" href="diamond.html">Diamond</a>
@@ -66,14 +66,14 @@
                         <h4 class="text-light mb-3">MB2BET บริการสมัครสมาชิก ฝาก-ถอน ให้คำปรึกษาลูกค้าตลอต 24 ชั่วโมง เพื่อให้ลูกค้าเดิมพันคาสิโนออนไลน็ได้อย่างต่อเนื่องโดยไม่มีปัญหาติดขัดในการเดิมพัน ท่านสามารถติดต่อเจ้าหน้าที่ได้ผ่านทางช่องทาง LINE : <a class="text-warning" href="https://line.me/R/ti/p/@mr99talk">@MR99talk</a></h4>
                         <div class="col-12 col-md-6 text-center">
                             <h4 class="text-warning">เพิ่มเพื่อนใน LINE ด้วยคิวอาร์โค้ด</h4>
-                            <img src="images/QR-code.jpg" alt="" srcset="">
+                            <img src="../images/QR-code.jpg" alt="" srcset="">
                         </div>
                         <div class="col-12 col-md-6 text-center d-flex flex-column align-items-center justify-content-center">
                             <h4 class="text-warning">ฝ่ายบริการลูกค้า</h4>
                             <h4 class="text-warning">สามารถติดต่อได้</h4>
                             <h4 class="text-warning">ทุกวัน 24 ชั่วโมง</h4>
-                            <a class="cbtn fb w-100 d-flex align-items-center justify-content-around mb-3" href=""><img class="icon" src="images/facebook.png" alt="">มารวย99</a>
-                            <a class="cbtn ln w-100 d-flex align-items-center justify-content-around" href=""><img class="icon" src="images/line.png" alt="">@MR99talk</a>
+                            <a class="cbtn fb w-100 d-flex align-items-center justify-content-around mb-3" href=""><img class="icon" src="../images/facebook.png" alt="">มารวย99</a>
+                            <a class="cbtn ln w-100 d-flex align-items-center justify-content-around" href=""><img class="icon" src="../images/line.png" alt="">@MR99talk</a>
                         </div>
                     </div>
                 </div>
@@ -82,5 +82,6 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="../js/oscheck.js"></script>
 </body>
 </html>
