--- a/th/game.html
+++ b/th/game.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/custom_new.css">
+    <link rel="stylesheet" href="../css/custom_new.css">
 
 </head>
 <body>
     <nav class="title-nav position-fixed navbar navbar-expand-lg navbar-dark align-items-center justify-content-end w-100 top-0">
-        <a class="logo nav-link position-absolute p-0 ph-only" href="index.html"><img class="logo-img w-100" src="images/logo.png" alt=""></a>
+        <a class="logo nav-link position-absolute p-0 ph-only" href="index.html"><img class="logo-img w-100" src="../images/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="promotions.html">Promotions</a>
                 </li>
                 <li class="nav-item text-center pc-only">
-                    <a class="logo nav-link position-relative" href="index.html"><img class="logo-img position-absolute w-100" src="images/logo.png" alt=""></a>
+                    <a class="logo nav-link position-relative" href="index.html"><img class="logo-img position-absolute w-100" src="../images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link" href="diamond.html">Diamond</a>
@@ -77,7 +77,7 @@
                         <!-- Game Card Start -->
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/1.JPG" class="card-img-top" alt="...">
+                                <img src="../images/1.JPG" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Stage 888</h5>
                                 <a name="btn" data-no="0" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -87,7 +87,7 @@
                         <!-- Game Card End -->
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/2.jpg" class="card-img-top" alt="...">
+                                <img src="../images/2.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Crazy Genie</h5>
                                 <a name="btn" data-no="1" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -96,7 +96,7 @@
                         </div>
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/3.jpg" class="card-img-top" alt="...">
+                                <img src="../images/3.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Elven Magic</h5>
                                 <a name="btn" data-no="2" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/4.jpg" class="card-img-top" alt="...">
+                                <img src="../images/4.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Jingle Bells</h5>
                                 <a name="btn" data-no="3" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -114,7 +114,7 @@
                         </div>
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/5.jpg" class="card-img-top" alt="...">
+                                <img src="../images/5.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Red Diamond</h5>
                                 <a name="btn" data-no="4" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -131,7 +131,7 @@
                         <!-- Game Card Start -->
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/1.JPG" class="card-img-top" alt="...">
+                                <img src="../images/1.JPG" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Stage 888</h5>
                                 <a name="btn" data-no="0" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -141,7 +141,7 @@
                         <!-- Game Card End -->
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/2.jpg" class="card-img-top" alt="...">
+                                <img src="../images/2.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Crazy Genie</h5>
                                 <a name="btn" data-no="1" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -150,7 +150,7 @@
                         </div>
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/3.jpg" class="card-img-top" alt="...">
+                                <img src="../images/3.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Elven Magic</h5>
                                 <a name="btn" data-no="2" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -159,7 +159,7 @@
                         </div>
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/4.jpg" class="card-img-top" alt="...">
+                                <img src="../images/4.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Jingle Bells</h5>
                                 <a name="btn" data-no="3" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -168,7 +168,7 @@
                         </div>
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/5.jpg" class="card-img-top" alt="...">
+                                <img src="../images/5.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Red Diamond</h5>
                                 <a name="btn" data-no="4" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -185,7 +185,7 @@
                         <!-- Game Card Start -->
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/1.JPG" class="card-img-top" alt="...">
+                                <img src="../images/1.JPG" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Stage 888</h5>
                                 <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -195,7 +195,7 @@
                         <!-- Game Card End -->
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/2.jpg" class="card-img-top" alt="...">
+                                <img src="../images/2.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Crazy Genie</h5>
                                 <a name="btn" data-no="1" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -204,7 +204,7 @@
                         </div>
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/3.jpg" class="card-img-top" alt="...">
+                                <img src="../images/3.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Elven Magic</h5>
                                 <a name="btn" data-no="2" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -213,7 +213,7 @@
                         </div>
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/4.jpg" class="card-img-top" alt="...">
+                                <img src="../images/4.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Jingle Bells</h5>
                                 <a name="btn" data-no="3" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -222,7 +222,7 @@
                         </div>
                         <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
                             <div class="card bg-black-50 text-light">
-                                <img src="images/5.jpg" class="card-img-top" alt="...">
+                                <img src="../images/5.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Red Diamond</h5>
                                 <a name="btn" data-no="4" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
@@ -269,7 +269,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <script src="js/myJS.js"></script>
+    <script src="../js/myJS.js"></script>
     <script src="https://unpkg.com/vue@2.3.4/dist/vue.js"></script>
 </body>
 </html>
