--- a/th/diamond.html
+++ b/th/diamond.html
@@ -39,8 +39,8 @@
                         Langue
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Thai</a>
-                        <a class="dropdown-item" href="#">English</a>
+                        <a class="dropdown-item" href="diamond.html">Thai</a>
+                        <a class="dropdown-item" href="../en/contact.html">English</a>
                     </div>
                 </li>
             </ul>
