--- a/th/index.html
+++ b/th/index.html
@@ -40,8 +40,8 @@
                         Langue
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Thai</a>
-                        <a class="dropdown-item" href="#">English</a>
+                        <a class="dropdown-item" href="index.html">Thai</a>
+                        <a class="dropdown-item" href="../en/index.html">English</a>
                     </div>
                 </li>
             </ul>
