--- a/en/game.html
+++ b/en/game.html
@@ -40,8 +40,8 @@
                         Langue
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Thai</a>
-                        <a class="dropdown-item" href="#">English</a>
+                        <a class="dropdown-item" href="../th/game.html">Thai</a>
+                        <a class="dropdown-item" href="game.html">English</a>
                     </div>
                 </li>
             </ul>
