修改遊戲頁載入json的寫法

--- a/en/game.html
+++ b/en/game.html
@@ -237,28 +237,23 @@
         <!-- product -->
         <div class="modal fade p-0" id="productDescription" tabindex="-1" role="dialog" aria-labelledby="productDescription" aria-hidden="true">
             <div class="modal-dialog" role="document">
-                <div class="modal-content my-5 text-light">
+                <div class="modal-content text-light">
                     <div class="modal-header">
                         <h5 class="modal-title" id="GameName"></h5>
                         <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body overflow-auto">
                         <div id="pageImg" class="w-100 img-box">
                             <img src="" class="card-img-top" alt="...">
+                            <h5>◆ดัชนีแนะนำ◆</h5>
+                            <p class="mb-0" name="GameMsg"></p>
+                            <p class="mb-0" name="GameMsg"></p>
+                            <img src="" class="card-img-top" alt="...">
+                            <p class="mb-0" name="GameMsg"></p>
+                            <p class="mb-0" name="GameMsg"></p>
                         </div>
-                    </div>
-                    <!-- <div class="d-flex px-3 pb-3 justify-content-between">
-                        <a id="Link1" href="https://www.pay69slot.com/%E0%B8%AA%E0%B8%A5%E0%B9%87%E0%B8%AD%E0%B8%95?brand=PG,JILI,RT,BNG,JOKER,SG,FC,JDB,PL,MGP,ISB,CQ9,KA,PNG,RSG,PTO,HBN&gameSelectType=all" class="btn btn-outline-warning w-48">ทดลองเล่น</a>
-                        <a id="Link2" href="https://www.pay69slot.com/%E0%B8%AA%E0%B8%A5%E0%B9%87%E0%B8%AD%E0%B8%95?brand=PG,JILI,RT,BNG,JOKER,SG,FC,JDB,PL,MGP,ISB,CQ9,KA,PNG,RSG,PTO,HBN&gameSelectType=all" class="btn btn-outline-warning w-48">เล่นเลย</a>
-                    </div> -->
-                    <div class="modal-footer flex-column align-items-start">
-                        <h5>◆ดัชนีแนะนำ◆</h5>
-                        <p class="mb-0" id="GameMain1"></p>
-                        <p class="mb-0" id="GameMain2"></p>
-                        <p class="mb-0" id="GameMain3"></p>
-                        <p class="mb-0" id="GameMain4"></p>
                     </div>
                 </div>
             </div>
