--- a/en/diamond.html
+++ b/en/diamond.html
@@ -17,22 +17,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto mx-auto">
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="index.html">send</a>
+                    <a class="nav-link" href="index.html"><img class="w-100 pc-only" src="../images/iCON_Home-ENG.png"><span class="ph-only justify-content-center">Home</span></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="game.html">Games</a>
+                    <a class="nav-link" href="game.html"><span class="ph-only justify-content-center">Game</span></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="promotions.html">Promotions</a>
+                    <a class="nav-link" href="promotions.html"><img class="w-100 pc-only" src="../images/iCON_News-ENG.png"><span class="ph-only justify-content-center">Promotions</span></a>
                 </li>
                 <li class="nav-item text-center pc-only">
                     <a class="logo nav-link position-relative" href="index.html"><img class="logo-img position-absolute w-100" src="../images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link active" href="diamond.html">Diamond</a>
+                    <a class="nav-link" href="diamond.html"><img class="w-100 pc-only" src="../images/iCON_Gift-ENG.png"><span class="ph-only justify-content-center">Diamond</span></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
+                    <a class="nav-link" href="contact.html"><img class="w-100 pc-only" src="../images/iCON_US-ENG.png"><span class="ph-only justify-content-center">Contact Us</span></a>
                 </li>
                 <li class="nav-item dropdown text-center">
                     <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -55,7 +55,7 @@
     </div>
 
 
-    <main class="container-fluid p-0 p-title diamond">
+    <main class="container-fluid p-0 diamond">
         <div class="w-100 overflow-hidden d-flex align-items-center justify-content-center diamond-img">
             <h2 class="text-light">Diamond</h2>
         </div>
