JSON結構改寫 / 更新遊戲頁載入JS

--- a/en/game.html
+++ b/en/game.html
@@ -73,163 +73,19 @@
                 <!-- Slots Game -->
                 <div class="tab-pane fade show active" id="pills-slots" role="tabpanel" aria-labelledby="pills-slots-tab">
                     <h2 id="slots" class="font-weight-bold w-100 text-center">SLOTS</h2>
-                    <div class="row w-100 mx-auto">
-                        <!-- Game Card Start -->
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/1.JPG" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Stage 888</h5>
-                                <a name="btn" data-no="0" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Game Card End -->
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/2.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Crazy Genie</h5>
-                                <a name="btn" data-no="1" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/3.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Elven Magic</h5>
-                                <a name="btn" data-no="2" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/4.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Jingle Bells</h5>
-                                <a name="btn" data-no="3" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/5.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Red Diamond</h5>
-                                <a name="btn" data-no="4" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div id="slots_list" class="row w-100 mx-auto"></div>
                 </div>
 
                 <!-- fishing Game -->
                 <div class="tab-pane fade" id="pills-fishing" role="tabpanel" aria-labelledby="pills-fishing-tab">
                     <h2 id="fishing" class="font-weight-bold w-100 text-center">FISHING</h2>
-                    <div class="row w-100 mx-auto">
-                        <!-- Game Card Start -->
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/1.JPG" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Stage 888</h5>
-                                <a name="btn" data-no="0" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Game Card End -->
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/2.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Crazy Genie</h5>
-                                <a name="btn" data-no="1" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/3.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Elven Magic</h5>
-                                <a name="btn" data-no="2" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/4.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Jingle Bells</h5>
-                                <a name="btn" data-no="3" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/5.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Red Diamond</h5>
-                                <a name="btn" data-no="4" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div id="fishing_list" class="row w-100 mx-auto"></div>
                 </div>
 
                 <!-- Others Game -->
                 <div class="tab-pane fade" id="pills-others" role="tabpanel" aria-labelledby="pills-others-tab">
                     <h2 id="others" class="font-weight-bold w-100 text-center">OTHERS</h2>
-                    <div class="row w-100 mx-auto">
-                        <!-- Game Card Start -->
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/1.JPG" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Stage 888</h5>
-                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Game Card End -->
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/2.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Crazy Genie</h5>
-                                <a name="btn" data-no="1" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/3.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Elven Magic</h5>
-                                <a name="btn" data-no="2" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/4.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Jingle Bells</h5>
-                                <a name="btn" data-no="3" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-card d-flex justify-content-center col-12 col-md-3 py-3">
-                            <div class="card bg-black-50 text-light">
-                                <img src="../images/5.jpg" class="card-img-top" alt="...">
-                                <div class="card-body d-flex flex-column justify-content-between">
-                                <h5 class="card-title">Red Diamond</h5>
-                                <a name="btn" data-no="4" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div id="others_list" class="row w-100 mx-auto"></div>
                 </div>
             </div>
         </div>
@@ -245,15 +101,7 @@
                         </button>
                     </div>
                     <div class="modal-body overflow-auto">
-                        <div id="pageImg" class="w-100 img-box">
-                            <!-- <img src="" class="card-img-top" alt="...">
-                            <h5>◆ดัชนีแนะนำ◆</h5>
-                            <p class="mb-0" name="GameMsg"></p>
-                            <p class="mb-0" name="GameMsg"></p>
-                            <img src="" class="card-img-top" alt="...">
-                            <p class="mb-0" name="GameMsg"></p>
-                            <p class="mb-0" name="GameMsg"></p> -->
-                        </div>
+                        <div id="pageImg" class="w-100 img-box"></div>
                     </div>
                 </div>
             </div>
@@ -264,7 +112,8 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <script src="../js/myJS.js"></script>
     <script src="../js/oscheck.js"></script>
+    <script src="../js/gamecard.js"></script>
+    <!-- <script src="../js/myJS.js"></script> -->
 </body>
 </html>
