--- a/en/contact.html
+++ b/en/contact.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="index.html"><img class="w-100 pc-only" src="../images/iCON_Home-ENG.png"><span class="ph-only justify-content-center">Home</span></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="game.html"><span class="ph-only justify-content-center">Game</span></a>
+                    <a class="nav-link" href="game.html"><img class="w-100 pc-only" src="../images/iCON_Game-ENG.png"><span class="ph-only justify-content-center">Game</span></a>
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link" href="promotions.html"><img class="w-100 pc-only" src="../images/iCON_News-ENG.png"><span class="ph-only justify-content-center">Promotions</span></a>
