--- a/th/index.html
+++ b/th/index.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="index.html"><img class="w-100 pc-only" src="../images/iCON_Home-TH.png"><span class="ph-only justify-content-center">Home</span></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="game.html"><span class="ph-only justify-content-center">Games</span></a>
+                    <a class="nav-link" href="game.html"><img class="w-100 pc-only" src="../images/iCON_Game-TH.png"><span class="ph-only justify-content-center">Games</span></a>
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link" href="promotions.html"><img class="w-100 pc-only" src="../images/iCON_News-TH.png"><span class="ph-only justify-content-center">Promotions</span></a>
